--- a/style.css
+++ b/style.css
@@ -44,9 +44,14 @@ main {
   padding: 10px 20px;
 }
 
-h2 {
+h2,
+h4 {
   border-bottom: 1px solid #111;
   padding-bottom: 10px;
   display: flex;
   justify-content: space-between;
+}
+
+h4 {
+  color: rgb(128, 128, 130);
 }
